--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -25,11 +25,10 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    float: right;
     clear: both;
 }
 
-ul li {
+header ul li {
     display: inline;
 }
 
