--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -7,18 +7,51 @@
 
 body {
     font-family: sans-serif;
+    background-color: #eee !important;
 }
 
 .container {
-    margin-top: 30px;
+    margin-top: 60px;
+    padding: 20px;
+    background-color: white !important;
 }
 
 header {
-    h1, h2, ul {
+    h1, ul {
         display: inline;
         margin-right: 20px;
         clear: both;
     }
+}
+
+header h1 {
+    clear: both;
+    text-transform: uppercase;
+    font-size: 26px;
+    font-weight: lighter;
+    letter-spacing: 2px;
+    vertical-align: middle;
+}
+
+header h2 {
+    clear: both;
+    font-size: 14px;
+    font-weight: lighter;
+    letter-spacing: 2px;
+    color:#aaa;
+    vertical-align: middle;
+    margin: 0px !important;
+    padding: 0px !importat;
+}
+
+header ul li {
+    font-size: 12px;
+    font-weight: bold;
+    display: inline;
+    background-color: gold;
+    text-transform: uppercase;
+    vertical-align: middle;
+    padding: 0px 6px;
 }
 
 ul {
@@ -28,9 +61,101 @@ ul {
     clear: both;
 }
 
-header ul li {
-    display: inline;
+a, a:hover {
+    text-decoration: none !important;
+    color:inherit !important;
 }
+
+#about {
+    float:right;
+    cursor: pointer;
+}
+
+/*************************
+********* Search *********
+**************************/
+
+#splash {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255,255,255,.95);
+    padding: 10%;
+    z-index: 9999999;
+}
+#closeSplash {
+    float: right;
+    background-color: transparent;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .5rem 1rem;
+    font-size: 30px;
+    border-radius: .25rem;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+/*************************
+********* Search *********
+**************************/
+
+.searchFormButtons {
+    width: 240px;
+    margin: 4px auto;
+    display: block;
+}
+
+#search {
+    margin-top: 20%;
+    text-align: center;
+}
+
+#query {
+    line-height: 1.25;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    border: 1px #ccc solid;
+    padding: .5rem 1rem;
+    font-size: 14px;
+    border-radius: .25rem;
+    text-align: center;
+    width: 240px;
+    user-select: none;
+}
+
+#searchButton {
+    text-transform: uppercase;
+    background-color: #eee;
+    line-height: 1.25;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .5rem 1rem;
+    font-size: 14px;
+    border-radius: .25rem;
+    -webkit-transition: all .2s ease-in-out;
+    -o-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+}
+
+#searchButton:hover {
+    cursor: pointer;
+}
+
 
 /*************************
 ********* Mixtape ********
