--- a/assets/stylesheets/main.less
+++ b/assets/stylesheets/main.less
@@ -177,3 +177,28 @@ table {
     stroke: #777;
     stroke-width: 2px;
 }
+
+#tooltip {   
+	position: absolute;           
+	padding: 20px;             
+	margin: 10px;
+	font: 14px sans-serif;        
+	background: lightsteelblue;   
+	border: 1px;      
+	border-radius: 2px;           
+	pointer-events: none;         
+}
+#tooltip h4{
+	margin:0;
+	font-size:12px;
+}
+#tooltip{
+	background:rgba(255,255,255,0.9);
+	border:1px solid dodgerblue;
+	border-radius:5px;
+	font-size:14px;
+	width:auto;
+	padding:8px;
+	color:gray;
+	opacity:0;
+}
